--- a/RenderingEngine/RawEngine/imgui.ini
+++ b/RenderingEngine/RawEngine/imgui.ini
@@ -11,3 +11,11 @@ Pos=96,58
 Size=1028,180
 Collapsed=1
 
+[Window][Controls]
+Pos=60,60
+Size=636,97
+
+[Window][LightControl]
+Pos=-98,76
+Size=1015,91
+
