Phong Gui elements + region division + Gui rework
Added Gui elements changing the ambient colour, the object colour, the light colour, the ambient strength, the specular strength. Divided the code into regions for easier readability and changed some Gui elements from SliderFloat to InputFloat a greater ease of use

--- a/RenderingEngine/RawEngine/imgui.ini
+++ b/RenderingEngine/RawEngine/imgui.ini
@@ -12,10 +12,14 @@ Size=1028,180
 Collapsed=1
 
 [Window][Controls]
-Pos=60,60
-Size=636,97
+Pos=0,34
+Size=647,126
 
 [Window][LightControl]
-Pos=-98,76
-Size=1015,91
+Pos=7,169
+Size=569,763
+
+[Window][Colour]
+Pos=810,554
+Size=540,465
 
