Setup for supporting multiple scenes

--- a/RenderingEngine/RawEngine/RawEngine.vcxproj
+++ b/RenderingEngine/RawEngine/RawEngine.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AllGameObjects.cpp" />
+    <ClCompile Include="AllScenes.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="core\assimpLoader.cpp" />
     <ClCompile Include="core\mesh.cpp" />
@@ -134,15 +136,22 @@
     <ClCompile Include="core\texture.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="RawEngine.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AllGameObjects.h" />
+    <ClInclude Include="AllScenes.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="core\assimpLoader.h" />
     <ClInclude Include="core\mesh.h" />
     <ClInclude Include="core\model.h" />
     <ClInclude Include="core\texture.h" />
     <ClInclude Include="core\vertex.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Light.fs" />
