--- a/RenderingEngine/RawEngine/imgui.ini
+++ b/RenderingEngine/RawEngine/imgui.ini
@@ -13,7 +13,7 @@ Collapsed=1
 
 [Window][Controls]
 Pos=0,34
-Size=647,126
+Size=635,126
 
 [Window][LightControl]
 Pos=7,169
@@ -22,4 +22,8 @@ Size=569,763
 [Window][Colour]
 Pos=810,554
 Size=540,465
+
+[Window][Scenes]
+Pos=1522,378
+Size=253,161
 
