--- a/RenderingEngine/RawEngine/imgui.ini
+++ b/RenderingEngine/RawEngine/imgui.ini
@@ -16,7 +16,7 @@ Pos=0,34
 Size=635,126
 
 [Window][LightControl]
-Pos=7,169
+Pos=-9,195
 Size=569,763
 
 [Window][Colour]
@@ -26,4 +26,8 @@ Size=540,465
 [Window][Scenes]
 Pos=1522,378
 Size=253,161
+
+[Window][Render Settings]
+Pos=1584,193
+Size=235,97
 
